# workflow-hhpm

./: LICENSE  README.md  pyproject.toml
aiida_hhpm/calculations/: syva.py
aiida_hhpm/data/: jsonable_structure.py
aiida_hhpm/parsers/: syva.py
aiida_hhpm/utils/: incar.py  kpoints.py  potcar.py
aiida_hhpm/workflows/: cation.py  main.py  property.py  relax.py
remote/: pymatgen_bader.py  pymatgen_work_function.py
